{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 2025,
  "lineage": "afbbb5a0-9319-78d2-2e7e-9f46a8bbe946",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "jd-rt-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:route-table/rtb-028afcaa3d9ece60a",
            "default_route_table_id": "rtb-028afcaa3d9ece60a",
            "id": "rtb-028afcaa3d9ece60a",
            "owner_id": "782863115905",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db3253a926fc34a2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jason-d-solo-RT"
            },
            "tags_all": {
              "Name": "jason-d-solo-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e409d019da539d1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jd-igw",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.jd-vpc-test",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:security-group/sg-0ef192db9a4d91e58",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow 80 from anywyere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              }
            ],
            "id": "sg-0ef192db9a4d91e58",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow 80 from anywyere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "782863115905",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jason-d-solo-Default-SG"
            },
            "tags_all": {
              "Name": "jason-d-solo-Default-SG"
            },
            "vpc_id": "vpc-0e409d019da539d1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jd-vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jd-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:internet-gateway/igw-0db3253a926fc34a2",
            "id": "igw-0db3253a926fc34a2",
            "owner_id": "782863115905",
            "tags": {
              "Name": "jason-d-solo-IGW"
            },
            "tags_all": {
              "Name": "jason-d-solo-IGW"
            },
            "vpc_id": "vpc-0e409d019da539d1a"
          },
          "dependencies": [
            "aws_vpc.jd-vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "jd-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:782863115905:loadbalancer/app/jd-alb/8241ac5b98f3e675",
            "arn_suffix": "app/jd-alb/8241ac5b98f3e675",
            "desync_mitigation_mode": "defensive",
            "dns_name": "jd-alb-915180111.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:782863115905:loadbalancer/app/jd-alb/8241ac5b98f3e675",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jd-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09cbf165e9e244b04"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-033d8b7ea5715c227"
              },
              {
                "subnet_id": "subnet-0ed1e2b5ba3c828f3"
              }
            ],
            "subnets": [
              "subnet-033d8b7ea5715c227",
              "subnet-0ed1e2b5ba3c828f3"
            ],
            "tags": {
              "Name": "jason-d-solo-ALB"
            },
            "tags_all": {
              "Name": "jason-d-solo-ALB"
            },
            "vpc_id": "vpc-0e409d019da539d1a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.jd-elb-sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.jd-vpc-test",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jd-443-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:782863115905:listener/app/jd-alb/8241ac5b98f3e675/4cbba690e615e28c",
            "certificate_arn": "arn:aws:iam::782863115905:server-certificate/bboys-alb-cert",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:782863115905:targetgroup/jd-ec2-tg/f6f5e5db7f198fe3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:782863115905:listener/app/jd-alb/8241ac5b98f3e675/4cbba690e615e28c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:782863115905:loadbalancer/app/jd-alb/8241ac5b98f3e675",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_server_certificate.alb-cert",
            "aws_lb.jd-alb",
            "aws_lb_target_group.ec2-tg",
            "aws_security_group.jd-elb-sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.jd-vpc-test",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ec2-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:782863115905:targetgroup/jd-ec2-tg/f6f5e5db7f198fe3",
            "arn_suffix": "targetgroup/jd-ec2-tg/f6f5e5db7f198fe3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 20,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:782863115905:targetgroup/jd-ec2-tg/f6f5e5db7f198fe3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jd-ec2-tg",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e409d019da539d1a"
          },
          "dependencies": [
            "aws_vpc.jd-vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jd-rt-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:route-table/rtb-0d1ed69f59048b835",
            "id": "rtb-0d1ed69f59048b835",
            "owner_id": "782863115905",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "jason-d-solo-private-RT"
            },
            "tags_all": {
              "Name": "jason-d-solo-private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e409d019da539d1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jd-vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5b12b2cfc093cf3",
            "route_table_id": "rtb-0d1ed69f59048b835",
            "subnet_id": "subnet-0ae46b7d76ef6b314"
          },
          "dependencies": [
            "aws_default_route_table.jd-rt-main",
            "aws_internet_gateway.jd-igw",
            "aws_route_table.jd-rt-private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.jd-vpc-test",
            "aws_vpc_endpoint.s3",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed96c10aebd2ee11",
            "route_table_id": "rtb-0d1ed69f59048b835",
            "subnet_id": "subnet-0c5d3b079afbb254f"
          },
          "dependencies": [
            "aws_default_route_table.jd-rt-main",
            "aws_internet_gateway.jd-igw",
            "aws_route_table.jd-rt-private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.jd-vpc-test",
            "aws_vpc_endpoint.s3",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-route-table-associaiton",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b5a2f633e2467ae",
            "route_table_id": "rtb-028afcaa3d9ece60a",
            "subnet_id": "subnet-0ed1e2b5ba3c828f3"
          },
          "dependencies": [
            "aws_default_route_table.jd-rt-main",
            "aws_internet_gateway.jd-igw",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.jd-vpc-test",
            "aws_vpc_endpoint.s3",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2c9b946378a53f3",
            "route_table_id": "rtb-028afcaa3d9ece60a",
            "subnet_id": "subnet-033d8b7ea5715c227"
          },
          "dependencies": [
            "aws_default_route_table.jd-rt-main",
            "aws_internet_gateway.jd-igw",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.jd-vpc-test",
            "aws_vpc_endpoint.s3",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jd-ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:security-group/sg-08e5de7b3f2bccb2e",
            "description": "secrutiy group for ec2s in private subnet",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "443 to s3",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-63a5400a"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              }
            ],
            "id": "sg-08e5de7b3f2bccb2e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "80 from elb",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09cbf165e9e244b04"
                ],
                "self": true,
                "to_port": 80
              }
            ],
            "name": "terraform-20230414203944791200000003",
            "name_prefix": "terraform-",
            "owner_id": "782863115905",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jason-d-solo-SG-EC2"
            },
            "tags_all": {
              "Name": "jason-d-solo-SG-EC2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e409d019da539d1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jd-elb-sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.jd-vpc-test",
            "data.aws_availability_zones.name",
            "data.aws_prefix_list.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jd-elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:security-group/sg-09cbf165e9e244b04",
            "description": "security group for elb",
            "egress": [],
            "id": "sg-09cbf165e9e244b04",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all internet 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              }
            ],
            "name": "terraform-20230414203942695800000002",
            "name_prefix": "terraform-",
            "owner_id": "782863115905",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jason-d-solo-ELB-SG"
            },
            "tags_all": {
              "Name": "jason-d-solo-ELB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e409d019da539d1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.jd-vpc-test",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb-443-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-4271409821",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09cbf165e9e244b04",
            "security_group_rule_id": "sgr-03670f0a942bc5ae8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_security_group.default",
            "aws_security_group.jd-elb-sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.jd-vpc-test",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2-443-alb-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "443 ingress for ec2 from alb",
            "from_port": 443,
            "id": "sgrule-1153179056",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08e5de7b3f2bccb2e",
            "security_group_rule_id": "sgr-0f509080f4d7aff75",
            "self": false,
            "source_security_group_id": "sg-09cbf165e9e244b04",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jd-ec2-sg",
            "aws_security_group.jd-elb-sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.jd-vpc-test",
            "data.aws_availability_zones.name",
            "data.aws_prefix_list.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2-443-main-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "443 from main sg to ec2",
            "from_port": 443,
            "id": "sgrule-3454593035",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08e5de7b3f2bccb2e",
            "security_group_rule_id": "sgr-0de7f5b3f2de4b4f0",
            "self": false,
            "source_security_group_id": "sg-0ef192db9a4d91e58",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_security_group.default",
            "aws_security_group.jd-ec2-sg",
            "aws_security_group.jd-elb-sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.jd-vpc-test",
            "data.aws_availability_zones.name",
            "data.aws_prefix_list.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2-80-main-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "inbound from default SG to ec2 port 80",
            "from_port": 80,
            "id": "sgrule-1743668513",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ef192db9a4d91e58",
            "security_group_rule_id": "sgr-0679f2251e8480b5c",
            "self": false,
            "source_security_group_id": "sg-08e5de7b3f2bccb2e",
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_security_group.default",
            "aws_security_group.jd-ec2-sg",
            "aws_security_group.jd-elb-sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.jd-vpc-test",
            "data.aws_availability_zones.name",
            "data.aws_prefix_list.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2-80-main-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3682082924",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08e5de7b3f2bccb2e",
            "security_group_rule_id": "sgr-06f61faefc94aedda",
            "self": false,
            "source_security_group_id": "sg-0ef192db9a4d91e58",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_security_group.default",
            "aws_security_group.jd-ec2-sg",
            "aws_security_group.jd-elb-sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.jd-vpc-test",
            "data.aws_availability_zones.name",
            "data.aws_prefix_list.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elb-sg-to-ec2-443-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "outbound port 443 from alb to EC2",
            "from_port": 443,
            "id": "sgrule-490872570",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09cbf165e9e244b04",
            "security_group_rule_id": "sgr-03a8191942d9f811b",
            "self": false,
            "source_security_group_id": "sg-08e5de7b3f2bccb2e",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jd-ec2-sg",
            "aws_security_group.jd-elb-sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.jd-vpc-test",
            "data.aws_availability_zones.name",
            "data.aws_prefix_list.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elb-sg-to-ec2-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "outbound port 80 from alb to EC2",
            "from_port": 80,
            "id": "sgrule-1946827870",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09cbf165e9e244b04",
            "security_group_rule_id": "sgr-05f229372d83d05dd",
            "self": false,
            "source_security_group_id": "sg-08e5de7b3f2bccb2e",
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jd-ec2-sg",
            "aws_security_group.jd-elb-sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.jd-vpc-test",
            "data.aws_availability_zones.name",
            "data.aws_prefix_list.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "main-sg-443-s3-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "443 s3 outbound managed prefix",
            "from_port": 443,
            "id": "sgrule-4023978309",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-63a5400a"
            ],
            "protocol": "tcp",
            "security_group_id": "sg-0ef192db9a4d91e58",
            "security_group_rule_id": "sgr-0a511b4b983609b78",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_security_group.default",
            "aws_vpc.jd-vpc-test",
            "data.aws_prefix_list.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "main-sg-80-s3-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "80 s3 outbound managed prefix",
            "from_port": 80,
            "id": "sgrule-2585589813",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-63a5400a"
            ],
            "protocol": "tcp",
            "security_group_id": "sg-0ef192db9a4d91e58",
            "security_group_rule_id": "sgr-000330d8dae27c43e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_security_group.default",
            "aws_vpc.jd-vpc-test",
            "data.aws_prefix_list.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "main-sg-ssh-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2981815092",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ef192db9a4d91e58",
            "security_group_rule_id": "sgr-0041c0cbffa1098b1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_security_group.default",
            "aws_vpc.jd-vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-0ae46b7d76ef6b314",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae46b7d76ef6b314",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jason-d-solo-private-us-east-1a"
            },
            "tags_all": {
              "Name": "jason-d-solo-private-us-east-1a"
            },
            "vpc_id": "vpc-0e409d019da539d1a"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.jd-vpc-test",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-0c5d3b079afbb254f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.0.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5d3b079afbb254f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jason-d-solo-private-us-east-1b"
            },
            "tags_all": {
              "Name": "jason-d-solo-private-us-east-1b"
            },
            "vpc_id": "vpc-0e409d019da539d1a"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.jd-vpc-test",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-0ed1e2b5ba3c828f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed1e2b5ba3c828f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jason-d-solo-public-us-east-1a"
            },
            "tags_all": {
              "Name": "jason-d-solo-public-us-east-1a"
            },
            "vpc_id": "vpc-0e409d019da539d1a"
          },
          "dependencies": [
            "aws_vpc.jd-vpc-test",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-033d8b7ea5715c227",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033d8b7ea5715c227",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jason-d-solo-public-us-east-1b"
            },
            "tags_all": {
              "Name": "jason-d-solo-public-us-east-1b"
            },
            "vpc_id": "vpc-0e409d019da539d1a"
          },
          "dependencies": [
            "aws_vpc.jd-vpc-test",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jd-vpc-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:vpc/vpc-0e409d019da539d1a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/24",
            "default_network_acl_id": "acl-0a225375a7626a2bf",
            "default_route_table_id": "rtb-028afcaa3d9ece60a",
            "default_security_group_id": "sg-0ef192db9a4d91e58",
            "dhcp_options_id": "dopt-04b46d2964e3827c1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e409d019da539d1a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-028afcaa3d9ece60a",
            "owner_id": "782863115905",
            "tags": {
              "Name": "JD-VPC-test",
              "name": "JD-VPC-test"
            },
            "tags_all": {
              "Name": "JD-VPC-test",
              "name": "JD-VPC-test"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:vpc-endpoint/vpce-0c5b2b2e461bfbd55",
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-0c5b2b2e461bfbd55",
            "owner_id": "782863115905",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "jason-d-solo-S3-Endpoint"
            },
            "tags_all": {
              "Name": "jason-d-solo-S3-Endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0e409d019da539d1a"
          },
          "dependencies": [
            "aws_vpc.jd-vpc-test"
          ]
        }
      ]
    }
  ]
}